--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <link rel="stylesheet" href="style.css" />
     <title>Glassmorphism buttons</title>
   </head>
-  <body></body>
+  <body>
+    <button class="glassy-button"><span>Старт</span></button>
+    <button class="glassy-button"><span>Финиш</span></button>
+  </body>
 </html>
